# loop-ollama

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
src/: __init__.py  cli.py  config.py  context_manager.py  convergence_controller.py  fault_tolerance.py  guard_layer.py  hardware_detector.py  logger.py  main.py  model_detector.py  ollama_client.py  prompt_builder.py  react_loop.py  state_manager.py  timeout_manager.py  tool_registry.py
src/prompts/: system_prompt_a.j2  system_prompt_b.j2  system_prompt_c.j2  system_prompt_d.j2  system_prompt_default.j2  system_prompt_s.j2
src/regex_lib/: heuristics.json  patterns.json
src/tool_schemas/: read.json  write.json
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_context_manager.py  test_convergence_controller.py  test_fault_tolerance.py  test_guard_layer.py  test_hardware_detector.py  test_logger.py  test_main.py  test_model_detector.py  test_ollama_client.py  test_prompt_builder.py  test_react_loop.py  test_state_manager.py  test_timeout_manager.py  test_tool_registry.py
tests/fixtures/: __init__.py
