[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-ollama"
version = "0.1.0"
description = "Loop Ollama -- 本地 AI 编程 Agent, 基于 Ollama REST API 的自建 ReAct 自主编程 agent"
authors = [{ name = "loop-ollama contributors" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28",
    "jsonschema>=4.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.10",
    "ruff>=0.5",
    "mypy>=1.11",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
loop-ollama = "src.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
markers = [
    "s_tier: Tests for S-tier models (32B+)",
    "a_tier: Tests for A-tier models (7-14B)",
    "b_tier: Tests for B-tier models (3-7B)",
    "c_tier: Tests for C-tier models (1-3B)",
    "d_tier: Tests for D-tier models (<1B)",
    "slow: Slow running tests",
    "integration: Integration tests requiring real services",
    "unit: Unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
